--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.6.20", features = ["json"] }
+futures = "0.3.28"
 scraper = "0.17.1"
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.104"
+surf = "2.3.2"
+tokio = { version = "1.31.0", features = ["full"]}
+tower-http = { version = "0.4.3", features = ["trace"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
