--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 axum = { version = "0.6.20", features = ["json"] }
+dotenv = "0.15.0"
 futures = "0.3.28"
 scraper = "0.17.1"
 serde = { version = "1.0.183", features = ["derive"] }
