--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="sqlite://sqlite.db"
+DATABASE_URL="postgres://alcheung:postgres@localhost:54320/alcheung?sslmode=disable"
+OUT_DIR="src"
