--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,6 @@
-[package]
-name = "jinjiang"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.72"
-axum = { version = "0.6.20", features = ["json"] }
-encoding = "0.2.33"
-futures = "0.3.28"
-scraper = "0.17.1"
-serde = { version = "1.0.183", features = ["derive"] }
-serde_json = "1.0.104"
-surf = "2.3.2"
-tokio = { version = "1.31.0", features = ["full"]}
-tower-http = { version = "0.4.3", features = ["trace"] }
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
-dotenvy = "0.15.7"
-chrono = "0.4.26"
-sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "tokio", "macros", "debug-print" ] }
-sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
+[workspace]
+members = [
+    "api",
+    "db",
+]
 
