chore: project sturcture

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL="postgres://alcheung:postgres@localhost:54320/alcheung?sslmode=disable"
-OUT_DIR="src"
+DATABASE_URL="sqlite://sqlite.db"
