--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "jinjiang"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+resolver = "2"
+members = [
+    ".",
+    "prisma-cli"
+]
+
 [dependencies]
 anyhow = "1.0.72"
 axum = { version = "0.6.20", features = ["json"] }
@@ -18,3 +25,4 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
 dotenvy = "0.15.7"
 chrono = "0.4.26"
+prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["migrations", "sqlite"] }
