--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,3 +9,9 @@ clap = { version = "4.3.21", features = ["derive"] }
 anyhow = "1.0.72"
 tokio = { version = "1.31.0", features = ["full"]}
 chrono = "0.4.26"
+scraper = "0.17.1"
+encoding_rs = "0.8.32"
+serde = { version = "1.0.183", features = ["derive"] }
+futures = "0.3.28"
+reqwest = "0.11.18"
+serde_json = "1.0.104"
