--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,3 +15,5 @@ serde = { version = "1.0.183", features = ["derive"] }
 futures = "0.3.28"
 reqwest = "0.11.18"
 serde_json = "1.0.104"
+regex = "1.9.3"
+lazy_static = "1.4.0"
