--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,24 @@ version: '3'
 services:
 
   app:
-    image: cangzhang/jinjiang:local
+    image: cangzhang/jinjiang:latest
     network_mode: host
     ports:
       - 3300:3300
     volumes:
       - ./sqlite.db:/app/sqlite.db
-    command: ["sh", "-c", "DATABASE_URL=${DATABASE_URL} jinjiang"]
+    command:
+      - sh
+      - -c
+      - DATABASE_URL="file:/app/sqlite.db" jinjiang
 
   cron:
-    image: cangzhang/jinjiang:local
+    image: cangzhang/jinjiang:latest
     network_mode: host
     volumes:
       - ./docker/crontab:/etc/crontabs
       - ./sqlite.db:/app/sqlite.db
-    command: ["cron","-f", "-l", "2"]
+    command: 
+      - sh
+      - -c
+      - cron -f -l 2
