--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,18 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Install Rust stable
+        run: rustup toolchain install stable --profile minimal
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/head/master' }}
+
+      - name: Build project
+        run: |
+          cargo prisma generate
+          cargo build --release -p jinjiang-cli
       
       - name: Login to Docker Hub
         uses: docker/login-action@v2
