--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,18 +27,17 @@ jobs:
       - name: Build project
         run: |
           cargo run -p prisma-cli -- generate
-          cargo build --release -p jinjiang-cli
-          ls target/release/jinjiang*
+          cargo build --release -p jinjiang-cli -p jinjiang
       
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      # - name: Build and push
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     push: true
-      #     tags: cangzhang/jinjiang:latest
-          # platforms: linux/amd64,linux/arm64
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: cangzhang/jinjiang:latest
+          #platforms: linux/amd64,linux/arm64
