--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   app:
     image: cangzhang/jinjiang:latest
     network_mode: host
+    restart: "always"
     ports:
       - 3300:3300
     volumes:
@@ -12,13 +13,18 @@ services:
       - sh
       - -c
       - DATABASE_URL="file:/app/sqlite.db" jinjiang
+    labels:
+      ofelia.enabled: "true"
+      ofelia.job-exec.sync-stats.schedule: "@every 4h"
+      ofelia.job-exec.sync-stats.command: "/usr/local/bin/jinjiang-cli sync-statistics"
+      ofelia.job-exec.sync-novels.schedule: "@every 12h"
+      ofelia.job-exec.sync-novels.command: "/usr/local/bin/jinjiang-cli sync-statistics"
 
-  cron:
-    image: cangzhang/jinjiang:latest
-    network_mode: host
+  ofelia:
+    image: mcuadros/ofelia:latest
+    depends_on:
+      - app
+    restart: "always"
+    command: daemon --docker
     volumes:
-      - ./sqlite.db:/app/sqlite.db
-    command: 
-      - sh
-      - -c
-      - cron -f -l 2
+      - /var/run/docker.sock:/var/run/docker.sock:ro
