--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-  
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v2
-      
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v2
 
       - name: Install Rust stable
         run: rustup toolchain install stable --profile minimal
@@ -27,18 +21,7 @@ jobs:
       - name: Build project
         run: |
           cargo run -p prisma-cli -- generate
-          cargo build --release -p jinjiang-cli 
-          cargo build --release -p jinjiang
-      
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: cangzhang/jinjiang:latest
-          #platforms: linux/amd64,linux/arm64
+          cargo build --release -p jinjiang-cli -p jinjiang
+          docker build . -t cangzhang/jinjiang:$GITHUB_SHA
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          docker push cangzhang/jinjiang:$GITHUB_SHA
