--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -15,9 +15,9 @@ services:
       - DATABASE_URL="file:/app/sqlite.db" jinjiang
     labels:
       ofelia.enabled: "true"
-      ofelia.job-exec.sync-stats.schedule: "@every 4h"
-      ofelia.job-exec.sync-stats.command: "/usr/local/bin/jinjiang-cli sync-statistics"
-      ofelia.job-exec.sync-novels.schedule: "@every 12h"
+      ofelia.job-exec.sync-stats.schedule: "0 0 1,13 * * *"
+      ofelia.job-exec.sync-stats.command: "/usr/local/bin/jinjiang-cli sync-novels"
+      ofelia.job-exec.sync-novels.schedule: "0 01 0,6,12,18 * * *"
       ofelia.job-exec.sync-novels.command: "/usr/local/bin/jinjiang-cli sync-statistics"
 
   ofelia:
